--- a/front/style.css
+++ b/front/style.css
@@ -62,3 +62,66 @@ nav {
 a:hover {
   cursor: pointer;
 }
+
+@keyframes ldio-d0lp8lee6hp {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(22.5deg);
+  }
+  100% {
+    transform: rotate(45deg);
+  }
+}
+.ldio-d0lp8lee6hp > div {
+  transform-origin: 100px 100px;
+  animation: ldio-d0lp8lee6hp 0.2s infinite linear;
+}
+.ldio-d0lp8lee6hp > div div {
+  position: absolute;
+  width: 22px;
+  height: 152px;
+  background: #e15b64;
+  left: 100px;
+  top: 100px;
+  transform: translate(-50%, -50%);
+}
+.ldio-d0lp8lee6hp > div div:nth-child(1) {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+}
+.ldio-d0lp8lee6hp > div div:nth-child(6) {
+  width: 80px;
+  height: 80px;
+  background: #ffffff;
+  border-radius: 50%;
+}
+.ldio-d0lp8lee6hp > div div:nth-child(3) {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+.ldio-d0lp8lee6hp > div div:nth-child(4) {
+  transform: translate(-50%, -50%) rotate(90deg);
+}
+.ldio-d0lp8lee6hp > div div:nth-child(5) {
+  transform: translate(-50%, -50%) rotate(135deg);
+}
+.loadingio-spinner-gear-byfsg9u2gqd {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+  background: #ffffff;
+}
+.ldio-d0lp8lee6hp {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0;
+}
+.ldio-d0lp8lee6hp div {
+  box-sizing: content-box;
+}
